[package]
name = "kcp"
version = "0.1.0"
authors = ["Yuanchao Sun <yuanchao.sun@gmail.com>"]

[dependencies]
byteorder = "1"
bytes = "0.4"
env_logger = { version = "0.3", default-features = false }
futures = "0.1"
iovec    = "0.1.0"
mio = "0.6"
rand = "0.3"
time = "0.1"
# tokio-core = "^0.1.9"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core.git", branch = "master" }
tokio-io = "0.1"
